# Uni.Sem7.WinterPractice

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routes/: photo.py  report.py  stream.py  video.py
app/core/: config.py
app/services/: counting.py  detector.py  overlay.py  postprocess.py  report.py  roi.py  stream_pipeline.py  video_reader.py
app/state/: stream_state.py
app/static/: index.html  photo.html  stream.html  video.html
app/static/js/: photo.js  stream.js  video.js
app/storage/: history_db.py
