[project]
name = "bicycle-counter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "numpy>=2.3.5",
    "opencv-python>=4.13.0.90",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.9",
    "sqlalchemy>=2.0.46",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.6",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
